-
Bug
-
Resolution: Done
-
P2: Important
-
6.0.0 Alpha
-
None
-
13
-
42979dea7669899b50bef2848d0e450d1258c9c1 (qt/qttools/dev)
-
Da Vinci sprint 19
As of right now, qdoc generates warnings about the copy/move constructor, assignment/move operators, and (in)equality operators for classes that have them implicitly defined, but explicitly documented, such as QMap.
If qdoc is able to discover that those special member functions exist, then it could generate the documentation automatically, taking "\ingroup shared" into account.
If qdoc cannot discover this, then we need to be able to silence the warning.
- resulted in
-
QTBUG-87044 Figure out how many implicit methods have explicit documentation
-
- Closed
-
| For Gerrit Dashboard: QTBUG-86984 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 317396,3 | qdoc: Allow documenting implicitly generated special member functions | dev | qt/qttools | Status: MERGED | +2 | 0 |