src/qdoc/functionnode.cpp
@@ -75,6 +75,7 @@ QT_BEGIN_NAMESPACE
 FunctionNode::FunctionNode(Aggregate *parent, const QString &name)
     : Node(Function, parent, name),
       m_const(false),
+      m_default(false),
       m_static(false),
       m_reimpFlag(false),
       m_attached(false),
@@ -105,6 +106,7 @@ FunctionNode::FunctionNode(Aggregate *parent, const QString &name)
 FunctionNode::FunctionNode(Metaness kind, Aggregate *parent, const QString &name, bool attached)
     : Node(Function, parent, name),
       m_const(false),
+      m_default(false),
       m_static(false),
       m_reimpFlag(false),
       m_attached(attached),
